<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="@dimen/main_activity_divider_padding"
    android:orientation="vertical"
    android:padding="@dimen/main_activity_padding">

    <Button
        android:id="@+id/main_activity_linear_example_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_buttons_height"
        android:text="@string/linear_example_label"/>

    <Button
        android:id="@+id/main_activity_grid_example_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_buttons_height"
        android:text="@string/grid_example_label"/>

    <Button
        android:id="@+id/main_activity_simple_example_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_buttons_height"
        android:text="@string/simple_example_label"/>
</LinearLayout>
