<?xml version="1.0" encoding="utf-8"?>
<com.princeparadoxes.danil.recyclerbindableadapter.views.FourSquareCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/simple_example_item_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/simple_example_linear_padding"
            android:paddingRight="@dimen/simple_example_linear_padding">

            <Button
                android:id="@+id/simple_example_item_move_to_top"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/simple_example_item_move_to_top"/>

            <Button
                android:id="@+id/simple_example_item_remove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/simple_example_item_remove"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/simple_example_linear_padding"
            android:paddingRight="@dimen/simple_example_linear_padding">

            <Button
                android:id="@+id/simple_example_item_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/simple_example_item_up"/>

            <Button
                android:id="@+id/simple_example_item_down"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/simple_example_item_down"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/simple_example_item_tittle"
        android:layout_width="@dimen/simple_example_tittle_width_height"
        android:layout_height="@dimen/simple_example_tittle_width_height"
        android:layout_gravity="center"
        android:background="@drawable/grid_example_tittle_bg"
        android:gravity="center"/>

</com.princeparadoxes.danil.recyclerbindableadapter.views.FourSquareCardView>